OEM product details

--- a/brocade.html
+++ b/brocade.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Dell EMC - Yashasvi</title>
+		<title>Brocade - Yashasvi</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="shortcut icon" href="images/favicon.ico" />
@@ -10,8 +10,8 @@
 	<body class="right-sidebar is-preload">
 		<div id="page-wrapper">
 			<section id="header">
-				<img class="portfolio-images" width="200" height="200" src="images/rack-servers.svg" alt="Dell EMC - Yashasvi" />
-					<h1><a href="#"><b>Dell EMC</b></a></h1>
+				<img class="portfolio-images" width="200" height="200" src="images/cloud-network.svg" alt="Brocade - Yashasvi" />
+					<h1><a href="#"><b>Brocade</b></a></h1>
 					<div class="full-nav">
 					<nav id="nav">
 
@@ -60,118 +60,96 @@
 								<article class="box post">
 									<section>
 										<header>
-											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Dell EMC Products Sold</b></h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Brocade Products Sold</b></h3>
 										</header>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Data Storage</b></h3>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Broadcom (Fibre Channel)</b></h3>
 										<p>
 											<ol>
-												<li>All Flash and Hybrid Storage</li>
-												<li>Powermax</li>
-												<li>Xtremio</li>
-												<li>Dell EMC Unity</li>
-												<li>SC Series</li>
-												<li>Isilon</li>
+												<li>Brocade X6 Director</li>
+												<li>Brocade DCX 8510 Backbone</li>
+												<li>Brocade SX6 Extension Blade</li>
+												<li>Brocade FX 8-24 Extension Blade</li>
+												<li>Brocade FC16-64 Blade</li>
+												<li>Brocade FCOE 10-24 Blade</li>
+												<li>Brocade G610 Switch</li>
+												<li>Brocade G620 Switch</li>
+												<li>Brocade 6505 Switch</li>
+												<li>Brocade 6510 Switch</li>
+												<li>Brocade 6520 Switch</li>
 											</ol>
 										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; NAS & Object Storage</b></h3>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Extreme Networks (Data Center Switching, Routing, Visibility, and Automation)</b></h3>
 										<p>
 											<ol>
-												<li>Islion</li>
-												<li>ECS</li>
-												<li>Dell-Emc Unity</li>
+												<li>Brocade SLX 9140</li>
+												<li>Brocade SLX 9240</li>
+												<li>Brocade SLX 9540</li>
+												<li>Brocade VDX 6740</li>
+												<li>Brocade VDX 6740-T</li>
+												<li>Brocade VDX 6940</li>
+												<li>Brocade VDX 6940-144S</li>
+												<li>Brocade CER 2000 Routers</li>
+												<li>Brocade CES 2000</li>
+												<li>Brocade 6910 Ethernet Access Switch</li>
+												<li>Brocade SLX 9850 Routers</li>
+												<li>Brocade VDX 8770</li>
+												<li>Brocade MLXe Routers</li>
+												<li>Brocade Workflow Composer</li>
+												<li>Brocade Workflow Composer Automation Suites</li>
+												<li>Brocade Packet Broker</li>
+												<li>Brocade Virtual Packet Broker</li>
+												<li>Brocade Session Director</li>
+												<li>Brocade Flow Optimizer</li>
+												<li>Brocade Virtual TAP</li>
+												<li>Brocade Visibility Manager</li>
 											</ol>
 										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Software Defined Storage</b></h3>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; HCL Technologies (Application Delivery ADX 1000/4000/10000 and vADX)</b></h3>
 										<p>
 											<ol>
-												<li>VxRail</li>
-												<li>IsilonSD Edge</li>
-												<li>ECS</li>
+												<li>ADX 1000</li>
+												<li>ADX 4000</li>
+												<li>ADX 10000</li>
+												<li>vADX</li>
 											</ol>
 										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Server</b></h3>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Lumina (SDN Controller and Applications)</b></h3>
 										<p>
 											<ol>
-												<li>Rack servers</li>
-												<li>Modular infrastructure</li>
-												<li>Tower servers</li>
-												<li>Systems management software</li>
-												<li>Ready nodes</li>
-												<li>Data centre infrastructure</li>
+												<li>Brocade SDN Controller</li>
+												<li>Brocade Flow Manager</li>
+												<li>Brocade VNF Manager</li>
 											</ol>
 										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Converged Infrastructure</b></h3>
-										<br>
-										<img class="point "src="images/point.svg" alt="point" width="25" height="25" /><h4><b>&nbsp; Converged System and Hyper Converged Infrastructure</b></h4>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; LMavenir (Software Networking vEPC Products)</b></h3>
 										<p>
 											<ol>
-												<li>VxRail</li>
-												<li>VSAN ready nodes</li>
-												<li>VxRack system FLEX</li>
-												<li>VxRACK SDDC</li>
+												<li>Brocade Virtual Cellular IOT Serving Gateway</li>
+												<li>Brocade Virtual Evolved Packet Core</li>
+												<li>Brocade Virtual Home Subscriber Server</li>
+												<li>Brocade Virtual Packet Data Network Gateway</li>
+												<li>Brocade Virtual SAE Gateway</li>
 											</ol>
 										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Data Protection</b></h3>
-										<br>
-										<img class="point "src="images/point.svg" alt="point" width="25" height="25" /><h4><b>&nbsp; Data Backup and Protection software</b></h4>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Pulse Secure (Software Networking vADC Products)</b></h3>
 										<p>
 											<ol>
-												<li>VMware Data protection</li>
-												<li>Cloud data protection</li>
-												<li>Cyber recovery solution</li>
+												<li>Brocade Virtual Traffic Manager</li>
+												<li>Brocade Virtual Web Application Firewall</li>
+												<li>Brocade Services Director</li>
 											</ol>
 										</p>
-										<img class="point "src="images/point.svg" alt="point" width="25" height="25" /><h4><b>&nbsp; Data Backup & Protection Storage</b></h4>
-										<br>
-										<img class="point "src="images/point.svg" alt="point" width="25" height="25" /><h4><b>&nbsp; Integrated Appliances</b></h4>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Ruckus Networks, an ARRIS company (ICX Switches and Ruckus Wireless)</b></h3>
 										<p>
 											<ol>
-												<li>Dell EMC IDPA DP - 5300</li>
-												<li>Dell EMC IDPA DP - 5800</li>
-												<li>Dell EMC IDPA DP - 8300</li>
-											</ol>
-										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Networking</b></h3>
-										<br>
-										<img class="point "src="images/point.svg" alt="point" width="25" height="25" /><h4><b>&nbsp; Networking Overview</b></h4>
-										<p>
-											<ol>
-												<li>Server network adapters</li>
-												<li>Switches</li>
-												<li>Network management</li>
-												<li>Wireless networking</li>
-												<li>Access platforms</li>
-												<li>Dell networking OS 9</li>
-												<li>Network and data security</li>
-											</ol>
-										</p>
-										<img class="point "src="images/point.svg" alt="point" width="25" height="25" /><h4><b>&nbsp; Switches</b></h4>
-										<p>
-											<ol>
-												<li>M - series blade </li>
-												<li>Managed campus</li>
-												<li>Smart managed switches</li>
-												<li>Modular chassis switches</li>
-												<li>Fibre channel SAN</li>
-												<li>High performance computing switches</li>
-											</ol>
-										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h4><b>&nbsp; Routers and Wireless Networking</b></h4>
-										<p>
-											<ol>
-												<li>New Aerohive access points</li>
-												<li>Hivemanger NG cloud management</li>
-											</ol>
-										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h4><b>&nbsp; Dell Products for work</b></h4>
-										<p>
-											<ol>
-												<li>Dell docking solutions</li>
-												<li>Dell latitude notebooks & 2-in-1s</li>
-												<li>Dell monitors</li>
-												<li>Dell optiplex desktops & all-in-ones</li>
-												<li>Dell precision workstations</li>
-												<li>Dell thin clients & VDI products</li>
+												<li>Ruckus Cloudpath</li>
+												<li>Ruckus Cloud Wi-Fi</li>
+												<li>Ruckus ICX Switches</li>
+												<li>Ruckus SmartCell Insight (SCI)</li>
+												<li>Ruckus SmartZone</li>
+												<li>Ruckus Unleashed</li>
+												<li>Ruckus Wireless Access Points</li>
+												<li>Ruckus Wireless Controllers</li>
 											</ol>
 										</p>
 									</section>
