--- a/cisco.html
+++ b/cisco.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Dell EMC - Yashasvi</title>
+		<title>Cisco - Yashasvi</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="shortcut icon" href="images/favicon.ico" />
@@ -10,8 +10,8 @@
 	<body class="right-sidebar is-preload">
 		<div id="page-wrapper">
 			<section id="header">
-				<img class="portfolio-images" width="200" height="200" src="images/rack-servers.svg" alt="Dell EMC - Yashasvi" />
-					<h1><a href="#"><b>Dell EMC</b></a></h1>
+				<img class="portfolio-images" width="200" height="200" src="images/networking.svg" alt="Cisco - Yashasvi" />
+					<h1><a href="#"><b>Cisco</b></a></h1>
 					<div class="full-nav">
 					<nav id="nav">
 
@@ -60,118 +60,94 @@
 								<article class="box post">
 									<section>
 										<header>
-											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Dell EMC Products Sold</b></h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Cisco Products Sold</b></h3>
 										</header>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Data Storage</b></h3>
-										<p>
-											<ol>
-												<li>All Flash and Hybrid Storage</li>
-												<li>Powermax</li>
-												<li>Xtremio</li>
-												<li>Dell EMC Unity</li>
-												<li>SC Series</li>
-												<li>Isilon</li>
-											</ol>
-										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; NAS & Object Storage</b></h3>
-										<p>
-											<ol>
-												<li>Islion</li>
-												<li>ECS</li>
-												<li>Dell-Emc Unity</li>
-											</ol>
-										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Software Defined Storage</b></h3>
-										<p>
-											<ol>
-												<li>VxRail</li>
-												<li>IsilonSD Edge</li>
-												<li>ECS</li>
-											</ol>
-										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Server</b></h3>
-										<p>
-											<ol>
-												<li>Rack servers</li>
-												<li>Modular infrastructure</li>
-												<li>Tower servers</li>
-												<li>Systems management software</li>
-												<li>Ready nodes</li>
-												<li>Data centre infrastructure</li>
-											</ol>
-										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Converged Infrastructure</b></h3>
-										<br>
-										<img class="point "src="images/point.svg" alt="point" width="25" height="25" /><h4><b>&nbsp; Converged System and Hyper Converged Infrastructure</b></h4>
-										<p>
-											<ol>
-												<li>VxRail</li>
-												<li>VSAN ready nodes</li>
-												<li>VxRack system FLEX</li>
-												<li>VxRACK SDDC</li>
-											</ol>
-										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Data Protection</b></h3>
-										<br>
-										<img class="point "src="images/point.svg" alt="point" width="25" height="25" /><h4><b>&nbsp; Data Backup and Protection software</b></h4>
-										<p>
-											<ol>
-												<li>VMware Data protection</li>
-												<li>Cloud data protection</li>
-												<li>Cyber recovery solution</li>
-											</ol>
-										</p>
-										<img class="point "src="images/point.svg" alt="point" width="25" height="25" /><h4><b>&nbsp; Data Backup & Protection Storage</b></h4>
-										<br>
-										<img class="point "src="images/point.svg" alt="point" width="25" height="25" /><h4><b>&nbsp; Integrated Appliances</b></h4>
-										<p>
-											<ol>
-												<li>Dell EMC IDPA DP - 5300</li>
-												<li>Dell EMC IDPA DP - 5800</li>
-												<li>Dell EMC IDPA DP - 8300</li>
-											</ol>
-										</p>
 										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Networking</b></h3>
-										<br>
-										<img class="point "src="images/point.svg" alt="point" width="25" height="25" /><h4><b>&nbsp; Networking Overview</b></h4>
 										<p>
 											<ol>
-												<li>Server network adapters</li>
 												<li>Switches</li>
-												<li>Network management</li>
-												<li>Wireless networking</li>
-												<li>Access platforms</li>
-												<li>Dell networking OS 9</li>
-												<li>Network and data security</li>
+												<li>Routers</li>
+												<li>Wireless</li>
+												<li>Networking Management</li>
+												<li>Interfaces & Modules</li>
+												<li>Optical Networking One</li>
 											</ol>
 										</p>
-										<img class="point "src="images/point.svg" alt="point" width="25" height="25" /><h4><b>&nbsp; Switches</b></h4>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Wireless And Mobility</b></h3>
 										<p>
 											<ol>
-												<li>M - series blade </li>
-												<li>Managed campus</li>
-												<li>Smart managed switches</li>
-												<li>Modular chassis switches</li>
-												<li>Fibre channel SAN</li>
-												<li>High performance computing switches</li>
+												<li>Access Points</li>
+												<li>Outdoor Industrial Access Point</li>
+												<li>Controllers</li>
 											</ol>
 										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h4><b>&nbsp; Routers and Wireless Networking</b></h4>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Security</b></h3>
 										<p>
 											<ol>
-												<li>New Aerohive access points</li>
-												<li>Hivemanger NG cloud management</li>
+												<li>Next-generation Firewall</li>
+												<li>Advanced Malware Protection</li>
+												<li>Policy And Access</li>
+												<li>VPN Security Clients</li>
+												<li>Email Security</li>
+												<li>Web Security</li>
 											</ol>
 										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h4><b>&nbsp; Dell Products for work</b></h4>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Collaboration</b></h3>
 										<p>
 											<ol>
-												<li>Dell docking solutions</li>
-												<li>Dell latitude notebooks & 2-in-1s</li>
-												<li>Dell monitors</li>
-												<li>Dell optiplex desktops & all-in-ones</li>
-												<li>Dell precision workstations</li>
-												<li>Dell thin clients & VDI products</li>
+												<li>Collaboration Endpoints</li>
+												<li>Conferencing</li>
+												<li>Customer Care</li>
+												<li>Unified Communications</li>
+											</ol>
+										</p>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Analytics</b></h3>
+										<p>
+											<ol>
+												<li>Data and Analytics</li>
+												<li>Data Center Analytics</li>
+											</ol>
+										</p>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Data Center</b></h3>
+										<p>
+											<ol>
+												<li>Server – Unified Computing</li>
+												<li>Data Centre Management And Automation</li>
+												<li>Data Center Security</li>
+												<li>Data Center Switches</li>
+												<li>Hyperconverged Infrastructure</li>
+												<li>Storage Networking</li>
+												<li>Virtual Networking</li>
+											</ol>
+										</p>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Video</b></h3>
+										<p>
+											<ol>
+												<li>Video Endpoints</li>
+												<li>Video Entertainment</li>
+												<li>Video Intelligence</li>
+												<li>Digital Signage</li>
+											</ol>
+										</p>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Internet of Things</b></h3>
+										<p>
+											<ol>
+												<li>Connectivity</li>
+												<li>Lot Analytics</li>
+												<li>Embedded Networks</li>
+												<li>Lot Management</li>
+												<li>Lox And Fog Applications</li>
+											</ol>
+										</p>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Software</b></h3>
+										<p>
+											<ol>
+											   <li>iOS And Nx-os</li>
+											   <li>Cisco One For Access</li>
+											   <li>Cisco One For Van</li>
+											   <li>Cisco One For Data Center Networking</li>
+											   <li>Cisco One For Data Center Compute And Cloud</li>
+											   <li>Cisco One For Advance Security</li>
 											</ol>
 										</p>
 									</section>
@@ -204,6 +180,7 @@
 										<li><a href="redhat.html">RedHat</a></li>
 										<li><a href="vmware.html">VMware</a></li>
 										<li><a href="suse.html">Suse</a></li>
+										<li><a href="cisco.html">Cisco</a></li>
 										<li><a href="polycom.html">Polycom</a></li>
 										<li><a href="microsoft.html">Microsoft</a></li>
 										<li><a href="apple.html">Apple</a></li>
