--- a/ibm.html
+++ b/ibm.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Dell EMC - Yashasvi</title>
+		<title>IBM - Yashasvi</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="shortcut icon" href="images/favicon.ico" />
@@ -10,8 +10,8 @@
 	<body class="right-sidebar is-preload">
 		<div id="page-wrapper">
 			<section id="header">
-				<img class="portfolio-images" width="200" height="200" src="images/rack-servers.svg" alt="Dell EMC - Yashasvi" />
-					<h1><a href="#"><b>Dell EMC</b></a></h1>
+				<img class="portfolio-images" width="200" height="200" src="images/increasing-stocks-graphic.svg" alt="IBM - Yashasvi" />
+					<h1><a href="#"><b>IBM</b></a></h1>
 					<div class="full-nav">
 					<nav id="nav">
 
@@ -60,118 +60,131 @@
 								<article class="box post">
 									<section>
 										<header>
-											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Dell EMC Products Sold</b></h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; IBM Products Sold</b></h3>
 										</header>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Data Storage</b></h3>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Top Software Trails</b></h3>
 										<p>
 											<ol>
-												<li>All Flash and Hybrid Storage</li>
-												<li>Powermax</li>
-												<li>Xtremio</li>
-												<li>Dell EMC Unity</li>
-												<li>SC Series</li>
-												<li>Isilon</li>
+												<li>IBM SPSS Statistics</li>
+												<li>IBM Watson Analytics</li>
+												<li>IBM Cloud</li>
+												<li>IBM SPSS Modeler</li>
+												<li>Watson Explorer Community Edition</li>
+												<li>IBM Cognos Analytics on Cloud</li>
 											</ol>
 										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; NAS & Object Storage</b></h3>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Analytics</b></h3>
 										<p>
 											<ol>
-												<li>Islion</li>
-												<li>ECS</li>
-												<li>Dell-Emc Unity</li>
+												<li>Analytics and Data Management</li>
+												<li>Industry Analytics</li>
+												<li>Business Optimization Analytics</li>
+												<li>Watson Analytics</li>
+												<li>Cloud Data Services</li>
+												<li>SPSS</li>
 											</ol>
 										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Software Defined Storage</b></h3>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Cloud</b></h3>
 										<p>
 											<ol>
-												<li>VxRail</li>
-												<li>IsilonSD Edge</li>
-												<li>ECS</li>
+												<li>IBM Cloud</li>
+												<li>Hybrid Integration</li>
+												<li>Object Storage</li>
+												<li>Middlewear</li>
+												<li>Cloud Managed Services</li>
+												<li>DevOps</li>
+												<li>Blueworks Live</li>
+												<li>BPM on Cloud</li>
+												<li>Websphere Application Server</li>
+												<li>IBM Cloud Private</li>
 											</ol>
 										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Server</b></h3>
-										<p>
-											<ol>
-												<li>Rack servers</li>
-												<li>Modular infrastructure</li>
-												<li>Tower servers</li>
-												<li>Systems management software</li>
-												<li>Ready nodes</li>
-												<li>Data centre infrastructure</li>
-											</ol>
-										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Converged Infrastructure</b></h3>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Cognitive business (US)</b></h3>
 										<br>
-										<img class="point "src="images/point.svg" alt="point" width="25" height="25" /><h4><b>&nbsp; Converged System and Hyper Converged Infrastructure</b></h4>
+										<img class="point "src="images/point.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Cognitive (US)</b></h3>
 										<p>
 											<ol>
-												<li>VxRail</li>
-												<li>VSAN ready nodes</li>
-												<li>VxRack system FLEX</li>
-												<li>VxRACK SDDC</li>
+												<li>Cognitive app gallery</li>
+												<li>Cognitive solutions in IBM Marketplace</li>
 											</ol>
 										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Data Protection</b></h3>
-										<br>
-										<img class="point "src="images/point.svg" alt="point" width="25" height="25" /><h4><b>&nbsp; Data Backup and Protection software</b></h4>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Collaboration & Talent Solutions</b></h3>
 										<p>
 											<ol>
-												<li>VMware Data protection</li>
-												<li>Cloud data protection</li>
-												<li>Cyber recovery solution</li>
+												<li>IBM Collaboration Solutions</li>
+												<li>IBM Connections Cloud</li>
 											</ol>
 										</p>
-										<img class="point "src="images/point.svg" alt="point" width="25" height="25" /><h4><b>&nbsp; Data Backup & Protection Storage</b></h4>
-										<br>
-										<img class="point "src="images/point.svg" alt="point" width="25" height="25" /><h4><b>&nbsp; Integrated Appliances</b></h4>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Industry Solutions</b></h3>
 										<p>
 											<ol>
-												<li>Dell EMC IDPA DP - 5300</li>
-												<li>Dell EMC IDPA DP - 5800</li>
-												<li>Dell EMC IDPA DP - 8300</li>
+												<li>Banking</li>
+												<li>Retail</li>
+												<li>All industries</li>
 											</ol>
 										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Networking</b></h3>
-										<br>
-										<img class="point "src="images/point.svg" alt="point" width="25" height="25" /><h4><b>&nbsp; Networking Overview</b></h4>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Internet of Things</b></h3>
 										<p>
 											<ol>
-												<li>Server network adapters</li>
-												<li>Switches</li>
-												<li>Network management</li>
-												<li>Wireless networking</li>
-												<li>Access platforms</li>
-												<li>Dell networking OS 9</li>
-												<li>Network and data security</li>
+												<li>Watson Internet of Things</li>
+												<li>Watson Iot platform</li>
+												<li>IoT cognitive Manufacturing</li>
+												<li>Asset Management</li>
+												<li>Facilities Management (US)</li>
+												<li>Product Development</li>
+												<li>IoT continous Engineering</li>
+												<li>Rational Doors Next Generation</li>
 											</ol>
 										</p>
-										<img class="point "src="images/point.svg" alt="point" width="25" height="25" /><h4><b>&nbsp; Switches</b></h4>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; IT Infrastructure</b></h3>
 										<p>
 											<ol>
-												<li>M - series blade </li>
-												<li>Managed campus</li>
-												<li>Smart managed switches</li>
-												<li>Modular chassis switches</li>
-												<li>Fibre channel SAN</li>
-												<li>High performance computing switches</li>
+												<li>IBM Power Systems</li>
+												<li>IBM zSystems</li>
+												<li>IBM LinuxONE</li>
+												<li>IBM Storage</li>
+												<li>India Systems Development Lab - ISDL</li>
 											</ol>
 										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h4><b>&nbsp; Routers and Wireless Networking</b></h4>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Mobile</b></h3>
 										<p>
 											<ol>
-												<li>New Aerohive access points</li>
-												<li>Hivemanger NG cloud management</li>
+												<li>API Connect</li>
+												<li>IBM Cloudant</li>
+												<li>Swift @IBM (US)</li>
+												<li>Mobile Security</li>
 											</ol>
 										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h4><b>&nbsp; Dell Products for work</b></h4>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Security</b></h3>
 										<p>
 											<ol>
-												<li>Dell docking solutions</li>
-												<li>Dell latitude notebooks & 2-in-1s</li>
-												<li>Dell monitors</li>
-												<li>Dell optiplex desktops & all-in-ones</li>
-												<li>Dell precision workstations</li>
-												<li>Dell thin clients & VDI products</li>
+												<li>Data Breach</li>
+												<li>IBM MaaS360</li>
+												<li>IBM Security AppScan</li>
+												<li>IBM Qradar Security Intelligence</li>
+											</ol>
+										</p>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Watson Customer Engagement</b></h3>
+										<p>
+											<ol>
+												<li>Customer Experience Analytics</li>
+												<li>Watson Campaign Automation</li>
+												<li>Omni-channel pricing solution</li>
+												<li>Digital Experience On Cloud</li>
+												<li>Watson Content Hub</li>
+												<li>Watson Commerce</li>
+												<li>Watson Supply Chain</li>
+												<li>Watson Marketing</li>
+											</ol>
+										</p>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Watson (US)</b></h3>
+										<p>
+											<ol>
+												<li>API catalog (US)</li>
+												<li>API documentation (US)</li>
+												<li>Watson blog (US)</li>
+												<li>Career and jobs (US)</li>
+												<li>Watson Analytics</li>
 											</ol>
 										</p>
 									</section>
