--- a/microsoft.html
+++ b/microsoft.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Dell EMC - Yashasvi</title>
+		<title>Polycom - Yashasvi</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="shortcut icon" href="images/favicon.ico" />
@@ -10,8 +10,8 @@
 	<body class="right-sidebar is-preload">
 		<div id="page-wrapper">
 			<section id="header">
-				<img class="portfolio-images" width="200" height="200" src="images/rack-servers.svg" alt="Dell EMC - Yashasvi" />
-					<h1><a href="#"><b>Dell EMC</b></a></h1>
+				<img class="portfolio-images" width="200" height="200" src="images/videoconf.svg" alt="Polycom - Yashasvi" />
+					<h1><a href="#"><b>Polycom</b></a></h1>
 					<div class="full-nav">
 					<nav id="nav">
 
@@ -60,118 +60,82 @@
 								<article class="box post">
 									<section>
 										<header>
-											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Dell EMC Products Sold</b></h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Polycom Products Sold</b></h3>
 										</header>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Data Storage</b></h3>
-										<p>
-											<ol>
-												<li>All Flash and Hybrid Storage</li>
-												<li>Powermax</li>
-												<li>Xtremio</li>
-												<li>Dell EMC Unity</li>
-												<li>SC Series</li>
-												<li>Isilon</li>
-											</ol>
-										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; NAS & Object Storage</b></h3>
-										<p>
-											<ol>
-												<li>Islion</li>
-												<li>ECS</li>
-												<li>Dell-Emc Unity</li>
-											</ol>
-										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Software Defined Storage</b></h3>
-										<p>
-											<ol>
-												<li>VxRail</li>
-												<li>IsilonSD Edge</li>
-												<li>ECS</li>
-											</ol>
-										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Server</b></h3>
-										<p>
-											<ol>
-												<li>Rack servers</li>
-												<li>Modular infrastructure</li>
-												<li>Tower servers</li>
-												<li>Systems management software</li>
-												<li>Ready nodes</li>
-												<li>Data centre infrastructure</li>
-											</ol>
-										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Converged Infrastructure</b></h3>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Voice Products</b></h3>
 										<br>
-										<img class="point "src="images/point.svg" alt="point" width="25" height="25" /><h4><b>&nbsp; Converged System and Hyper Converged Infrastructure</b></h4>
+										<img class="point "src="images/point.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Conference Phones</b></h3>
 										<p>
 											<ol>
-												<li>VxRail</li>
-												<li>VSAN ready nodes</li>
-												<li>VxRack system FLEX</li>
-												<li>VxRACK SDDC</li>
+												<li>Polycom trio 8800</li>
+												<li>Polycom trio 8500</li>
+												<li>SoundStation Ip 7000</li>
+												<li>SoundStation Ip 6000</li>
+												<li>SoundStation Ip 5000</li>
+												<li>SoundStation duo</li>
+												<li>SoundStation 2</li>
+												<li>Voicestation 300</li>
+												<li>Polycom voxbox speakerphone</li>
+												<li>Cx5500 unified conference station</li>
+												<li>Cx5100 unified conference station</li>
 											</ol>
 										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Data Protection</b></h3>
-										<br>
-										<img class="point "src="images/point.svg" alt="point" width="25" height="25" /><h4><b>&nbsp; Data Backup and Protection software</b></h4>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; VoIP Desk phones</b></h3>
 										<p>
 											<ol>
-												<li>VMware Data protection</li>
-												<li>Cloud data protection</li>
-												<li>Cyber recovery solution</li>
+												<li>Vvx 101</li>
+												<li>Vvx 201</li>
+												<li>Vvx 300 series</li>
+												<li>Vvx 400 series</li>
+												<li>Vvx 500 series</li>
+												<li>Vvx 600 series</li>
+												<li>Vvx 1500</li>
+												<li>Vvx 1500 D</li>
+												<li>Vvx D60 Wireless handset</li>
+												<li>Polycom OBI 2182</li>
 											</ol>
 										</p>
-										<img class="point "src="images/point.svg" alt="point" width="25" height="25" /><h4><b>&nbsp; Data Backup & Protection Storage</b></h4>
-										<br>
-										<img class="point "src="images/point.svg" alt="point" width="25" height="25" /><h4><b>&nbsp; Integrated Appliances</b></h4>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; VoIP Adapters</b></h3>
 										<p>
 											<ol>
-												<li>Dell EMC IDPA DP - 5300</li>
-												<li>Dell EMC IDPA DP - 5800</li>
-												<li>Dell EMC IDPA DP - 8300</li>
+												<li>OBI 300</li>
+												<li>OBI 302</li>
 											</ol>
 										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Networking</b></h3>
-										<br>
-										<img class="point "src="images/point.svg" alt="point" width="25" height="25" /><h4><b>&nbsp; Networking Overview</b></h4>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Installed Audio</b></h3>
 										<p>
 											<ol>
-												<li>Server network adapters</li>
-												<li>Switches</li>
-												<li>Network management</li>
-												<li>Wireless networking</li>
-												<li>Access platforms</li>
-												<li>Dell networking OS 9</li>
-												<li>Network and data security</li>
+												<li>Sound structure C series</li>
+												<li>Sound structure SR12</li>
 											</ol>
 										</p>
-										<img class="point "src="images/point.svg" alt="point" width="25" height="25" /><h4><b>&nbsp; Switches</b></h4>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Microsoft Solutions</b></h3>
 										<p>
 											<ol>
-												<li>M - series blade </li>
-												<li>Managed campus</li>
-												<li>Smart managed switches</li>
-												<li>Modular chassis switches</li>
-												<li>Fibre channel SAN</li>
-												<li>High performance computing switches</li>
+												<li>Volp desk phones</li>
+												<li>Conference phones</li>
+												<li>Office 365 phones</li>
+												<li>Installed audio</li>
 											</ol>
 										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h4><b>&nbsp; Routers and Wireless Networking</b></h4>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Mobile</b></h3>
 										<p>
 											<ol>
-												<li>New Aerohive access points</li>
-												<li>Hivemanger NG cloud management</li>
+												<li>Browser based</li>
+												<li>Desktop</li>
+												<li>Mobile</li>
 											</ol>
 										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h4><b>&nbsp; Dell Products for work</b></h4>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Room</b></h3>
 										<p>
 											<ol>
-												<li>Dell docking solutions</li>
-												<li>Dell latitude notebooks & 2-in-1s</li>
-												<li>Dell monitors</li>
-												<li>Dell optiplex desktops & all-in-ones</li>
-												<li>Dell precision workstations</li>
-												<li>Dell thin clients & VDI products</li>
+												<li>Real presence medialign</li>
+												<li>Real presence group series</li>
+												<li>Real presence trio</li>
+												<li>Real presence convene</li>
+												<li>Real presence debut</li>
+												<li>Real presence centro</li>
+												<li>Real presence peripherals</li>
 											</ol>
 										</p>
 									</section>
@@ -204,6 +168,7 @@
 										<li><a href="redhat.html">RedHat</a></li>
 										<li><a href="vmware.html">VMware</a></li>
 										<li><a href="suse.html">Suse</a></li>
+										<li><a href="cisco.html">Cisco</a></li>
 										<li><a href="polycom.html">Polycom</a></li>
 										<li><a href="microsoft.html">Microsoft</a></li>
 										<li><a href="apple.html">Apple</a></li>
