--- a/netapp.html
+++ b/netapp.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Dell EMC - Yashasvi</title>
+		<title>NetApp - Yashasvi</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="shortcut icon" href="images/favicon.ico" />
@@ -10,11 +10,10 @@
 	<body class="right-sidebar is-preload">
 		<div id="page-wrapper">
 			<section id="header">
-				<img class="portfolio-images" width="200" height="200" src="images/rack-servers.svg" alt="Dell EMC - Yashasvi" />
-					<h1><a href="#"><b>Dell EMC</b></a></h1>
+				<img class="portfolio-images" width="200" height="200" src="images/cloud-db.svg" alt="NetApp - Yashasvi" />
+					<h1><a href="#"><b>NetApp</b></a></h1>
 					<div class="full-nav">
 					<nav id="nav">
-
 						<div class="dropdown">
 							<a class="dropbtn" href="index.html">Home</a>
 						</div>
@@ -60,118 +59,135 @@
 								<article class="box post">
 									<section>
 										<header>
-											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Dell EMC Products Sold</b></h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; NetApp Products Sold</b></h3>
 										</header>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Data Storage</b></h3>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Cloud Data Services</b></h3>
 										<p>
 											<ol>
-												<li>All Flash and Hybrid Storage</li>
-												<li>Powermax</li>
-												<li>Xtremio</li>
-												<li>Dell EMC Unity</li>
-												<li>SC Series</li>
-												<li>Isilon</li>
+												<li>Netapp cloud volumes for AWS</li>
+												<li>ONTAP cloud</li>
+												<li>Cloud sync data syncronization</li>
+												<li>Cloud backup</li>
+												<li>Netapp private storage for cloud</li>
+												<li>Cloud control for microsoft office 365</li>
 											</ol>
 										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; NAS & Object Storage</b></h3>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Converged systems</b></h3>
 										<p>
 											<ol>
-												<li>Islion</li>
-												<li>ECS</li>
-												<li>Dell-Emc Unity</li>
+												<li>Flexpod</li>
+												<li>NFLEX</li>
+												<li>Netapp HCI</li>
 											</ol>
 										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Software Defined Storage</b></h3>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Data storage Software</b></h3>
 										<p>
 											<ol>
-												<li>VxRail</li>
-												<li>IsilonSD Edge</li>
-												<li>ECS</li>
+												<li>ONTAP data management software</li>
+												<li>solidfire element OS</li>
+												<li>SANtricity software</li>
+												<li>ONTAP select</li>
+												<li>StorageGRID webscale software</li>
 											</ol>
 										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Server</b></h3>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Data infrastructure management</b></h3>
 										<p>
 											<ol>
-												<li>Rack servers</li>
-												<li>Modular infrastructure</li>
-												<li>Tower servers</li>
-												<li>Systems management software</li>
-												<li>Ready nodes</li>
-												<li>Data centre infrastructure</li>
+												<li>onCommand insight</li>
+												<li>onCommand unified manager</li>
+												<li>onCommand workflow automation</li>
+												<li>onCommand cloud manager</li>
+												<li>Virtual infrastructure management</li>
+												<li>Active IQ predictive analytics & support</li>
 											</ol>
 										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Converged Infrastructure</b></h3>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Data backup and Recovery</b></h3>
+										<p>
+											<ol>
+												<li>Snapcentre backup management</li>
+												<li>Snapmirror data replication</li>
+												<li>Metrocluster business continuity</li>
+												<li>Snaplock data compliances</li>
+											</ol>
+										</p>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; ONTAP data security</b></h3>
+										<p>
+											<ol>
+												<li>Comprehensive logging and auditing</li>
+												<li>Secure multitenancy</li>
+												<li>Role-based Access control</li>
+												<li>Secure purge</li>
+												<li>Multifactor Authentication</li>
+												<li>Antivirus integration</li>
+											</ol>
+										</p>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; All-Flash Storage</b></h3>
 										<br>
-										<img class="point "src="images/point.svg" alt="point" width="25" height="25" /><h4><b>&nbsp; Converged System and Hyper Converged Infrastructure</b></h4>
+										<img class="point "src="images/point.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; AFF A-Series</b></h3>
 										<p>
 											<ol>
-												<li>VxRail</li>
-												<li>VSAN ready nodes</li>
-												<li>VxRack system FLEX</li>
-												<li>VxRACK SDDC</li>
+											   <li>AFF A800</li>
+											   <li>AFF A700s</li>
+											   <li>AFF A700</li>
+											   <li>AFF A300</li>
+											   <li>AFF A220</li>
 											</ol>
 										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Data Protection</b></h3>
+										<img class="point "src="images/point.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Solid fire</b></h3>
+										<p>
+											<ol>
+											   <li>SF4805</li>
+											   <li>SF9605</li>
+											   <li>SF19210</li>
+											   <li>SF38410</li>
+											   <li>FC NODE</li>
+											</ol>
+										</p>
+										<img class="point "src="images/point.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; EF-Series</b></h3>
+										<p>
+											<ol>
+												<li>NetApp EF570 All-Flash Array</li>
+											    <li>NetApp EF280 All-Flash Array</li>
+											</ol>
+										</p>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Hybrid Storage</b></h3>
 										<br>
-										<img class="point "src="images/point.svg" alt="point" width="25" height="25" /><h4><b>&nbsp; Data Backup and Protection software</b></h4>
+										<img class="point "src="images/point.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; FAS</b></h3>
 										<p>
 											<ol>
-												<li>VMware Data protection</li>
-												<li>Cloud data protection</li>
-												<li>Cyber recovery solution</li>
+												<li>FAS9000</li>
+											    <li>FAS8200</li>
+											    <li>FAS2700</li>
 											</ol>
 										</p>
-										<img class="point "src="images/point.svg" alt="point" width="25" height="25" /><h4><b>&nbsp; Data Backup & Protection Storage</b></h4>
+										<img class="point "src="images/point.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; E-Series</b></h3>
+										<p>
+											<ol>
+												<li>E5700</li>
+											    <li>E5600</li>
+											  	<li>E2800</li>
+											</ol>
+										</p>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Data Storage Systems</b></h3>
 										<br>
-										<img class="point "src="images/point.svg" alt="point" width="25" height="25" /><h4><b>&nbsp; Integrated Appliances</b></h4>
+										<img class="point "src="images/point.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; StorageGRID webscale object storage</b></h3>
 										<p>
 											<ol>
-												<li>Dell EMC IDPA DP - 5300</li>
-												<li>Dell EMC IDPA DP - 5800</li>
-												<li>Dell EMC IDPA DP - 8300</li>
+											   <li>SG5760</li>
+											   <li>SG5712</li>
 											</ol>
 										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Networking</b></h3>
+										<img class="point "src="images/point.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; FlexArray storage virtualization</b></h3>
 										<br>
-										<img class="point "src="images/point.svg" alt="point" width="25" height="25" /><h4><b>&nbsp; Networking Overview</b></h4>
+										<img class="point "src="images/point.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Disc shelves & storage media</b></h3>
 										<p>
 											<ol>
-												<li>Server network adapters</li>
-												<li>Switches</li>
-												<li>Network management</li>
-												<li>Wireless networking</li>
-												<li>Access platforms</li>
-												<li>Dell networking OS 9</li>
-												<li>Network and data security</li>
-											</ol>
-										</p>
-										<img class="point "src="images/point.svg" alt="point" width="25" height="25" /><h4><b>&nbsp; Switches</b></h4>
-										<p>
-											<ol>
-												<li>M - series blade </li>
-												<li>Managed campus</li>
-												<li>Smart managed switches</li>
-												<li>Modular chassis switches</li>
-												<li>Fibre channel SAN</li>
-												<li>High performance computing switches</li>
-											</ol>
-										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h4><b>&nbsp; Routers and Wireless Networking</b></h4>
-										<p>
-											<ol>
-												<li>New Aerohive access points</li>
-												<li>Hivemanger NG cloud management</li>
-											</ol>
-										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h4><b>&nbsp; Dell Products for work</b></h4>
-										<p>
-											<ol>
-												<li>Dell docking solutions</li>
-												<li>Dell latitude notebooks & 2-in-1s</li>
-												<li>Dell monitors</li>
-												<li>Dell optiplex desktops & all-in-ones</li>
-												<li>Dell precision workstations</li>
-												<li>Dell thin clients & VDI products</li>
+												<li>DS224C</li>
+												<li>DS2246</li>
+												<li>DS212C</li>
+												<li>DS4246</li>
+												<li>DS4486</li>
+												<li>DS460C</li>
 											</ol>
 										</p>
 									</section>
