--- a/products.html
+++ b/products.html
@@ -82,9 +82,6 @@
 														</div>
 														<br>
 													</header>
-													<p><b>
-
-													</b></p>
 												</section>
 											</div>
 
@@ -97,8 +94,6 @@
 														</div>
 														<br>
 													</header>
-													<p><b>
-													</b></p>
 												</section>
 											</div>
 
@@ -107,12 +102,10 @@
 													<img class="portfolio-images" width="200" height="200" src="images/increasing-stocks-graphic.svg" alt="IBM" /><br>
 													<header>
 														<div class="center">
-														<h3><b>IBM</b></h3>
+														<h3><b><a href="ibm.html" target="_blank">IBM</a></b></h3>
 													</div>
 														<br>
 													</header>
-													<p><b>
-													</b></p>
 												</section>
 											</div>
 
@@ -121,12 +114,10 @@
 													<img class="portfolio-images" width="200" height="200" src="images/cloud-db.svg" alt="NetApp" /><br>
 													<header>
 														<div class="center">
-															<h3><b>NetApp</b></h3>
+															<h3><b><a href="netapp.html" target="_blank">NetApp</a></b></h3>
 														</div>
 														<br>
 													</header>
-													<p><b>
-													</b></p>
 												</section>
 											</div>
 
@@ -135,12 +126,10 @@
 													<img class="portfolio-images" width="200" height="200" src="images/code-terminal.svg" alt="American Megatrends" /><br>
 													<header>
 														<div class="center">
-															<h3><b>American Megatrends</b></h3>
+															<h3><b><a href="american-megatrends.html" target="_blank">American Megatrends</a></b></h3>
 														</div>
 														<br>
 													</header>
-													<p><b>
-													</b></p>
 												</section>
 											</div>
 
@@ -149,12 +138,10 @@
 													<img class="portfolio-images" width="200" height="200" src="images/cloud-security.svg" alt="Hitachi" /><br>
 													<header>
 														<div class="center">
-															<h3><b>Hitachi</b></h3>
+															<h3><b><a href="hitachi.html" target="_blank">Hitachi</a></b></h3>
 														</div>
 														<br>
 													</header>
-													<p><b>
-													</b></p>
 												</section>
 											</div>
 
@@ -163,12 +150,10 @@
 													<img class="portfolio-images" width="200" height="200" src="images/antivirus.svg" alt="Symantec" /><br>
 													<header>
 														<div class="center">
-															<h3><b>Symantec</b></h3>
+															<h3><b><a href="symantec.html" target="_blank">Symantec</a></b></h3>
 														</div>
 														<br>
 													</header>
-													<p><b>
-													</b></p>
 												</section>
 											</div>
 
@@ -177,12 +162,10 @@
 													<img class="portfolio-images" width="200" height="200" src="images/router.svg" alt="HP Enterprise" /><br>
 													<header>
 														<div class="center">
-															<h3><b>HP Enterprise</b></h3>
+															<h3><b><a href="hpe.html" target="_blank">HP Enterprise</a></b></h3>
 														</div>
 														<br>
 													</header>
-													<p><b>
-													</b></p>
 												</section>
 											</div>
 
@@ -191,12 +174,10 @@
 													<img class="portfolio-images" width="200" height="200" src="images/server-check.svg" alt="Acronis" /><br>
 													<header>
 														<div class="center">
-															<h3><b>Acronis</b></h3>
+															<h3><b><a href="acronis.html" target="_blank">Acronis</a></b></h3>
 														</div>
 														<br>
 													</header>
-													<p><b>
-													</b></p>
 												</section>
 											</div>
 
@@ -205,12 +186,10 @@
 													<img class="portfolio-images" width="200" height="200" src="images/cloud-network.svg" alt="Brocade" /><br>
 													<header>
 														<div class="center">
-															<h3><b>Brocade</b></h3>
+															<h3><b><a href="brocade.html" target="_blank">Brocade</a></b></h3>
 														</div>
 														<br>
 													</header>
-													<p><b>
-													</b></p>
 												</section>
 											</div>
 
@@ -219,12 +198,10 @@
 													<img class="portfolio-images" width="200" height="200" src="images/email-authentication.svg" alt="Entrust Datacard" /><br>
 													<header>
 														<div class="center">
-															<h3><b>Entrust Datacard</b></h3>
+															<h3><b><a href="entrust-datacard.html">Entrust Datacard</a></b></h3>
 														</div>
 														<br>
 													</header>
-													<p><b>
-													</b></p>
 												</section>
 											</div>
 
@@ -233,12 +210,10 @@
 													<img class="portfolio-images" width="200" height="200" src="images/firewall.svg" alt="Sophos" /><br>
 													<header>
 														<div class="center">
-															<h3><b>Sophos</b></h3>
+															<h3><b><a href="sophos.html" target="_blank">Sophos</a></b></h3>
 														</div>
 														<br>
 													</header>
-													<p><b>
-													</b></p>
 												</section>
 											</div>
 
@@ -247,12 +222,10 @@
 													<img class="portfolio-images" width="200" height="200" src="images/cloud-security.svg" alt="InstaSafe" /><br>
 													<header>
 														<div class="center">
-															<h3><b>InstaSafe</b></h3>
+															<h3><b><a href="instasafe.html" target="_blank">InstaSafe</a></b></h3>
 														</div>
 														<br>
 													</header>
-													<p><b>
-													</b></p>
 												</section>
 											</div>
 
@@ -261,12 +234,10 @@
 													<img class="portfolio-images" width="200" height="200" src="images/smartphone.svg" alt="Riverbed" /><br>
 													<header>
 														<div class="center">
-															<h3><b>Riverbed</b></h3>
+															<h3><b><a href="riverbed.html" target="_blank">Riverbed</a></b></h3>
 														</div>
 														<br>
 													</header>
-													<p><b>
-													</b></p>
 												</section>
 											</div>
 
@@ -275,12 +246,10 @@
 													<img class="portfolio-images" width="200" height="200" src="images/save-outlined-diskette.svg" alt="Seclore" /><br>
 													<header>
 														<div class="center">
-															<h3><b>Seclore</b></h3>
+															<h3><b><a href="seclore.html" target="_blank">Seclore</a></b></h3>
 														</div>
 														<br>
 													</header>
-													<p><b>
-													</b></p>
 												</section>
 											</div>
 
@@ -289,12 +258,10 @@
 													<img class="portfolio-images" width="200" height="200" src="images/linux-logo.svg" alt="RedHat" /><br>
 													<header>
 														<div class="center">
-															<h3><b>RedHat</b></h3>
+															<h3><b><a href="redhat.html" target="_blank">RedHat</a></b></h3>
 														</div>
 														<br>
 													</header>
-													<p><b>
-													</b></p>
 												</section>
 											</div>
 
@@ -303,12 +270,10 @@
 													<img class="portfolio-images" width="200" height="200" src="images/videocall.svg" alt="VMware" /><br>
 													<header>
 														<div class="center">
-															<h3><b>VMware</b></h3>
+															<h3><b><a href="vmware.html" target="_blank">VMware</a></b></h3>
 														</div>
 														<br>
 													</header>
-													<p><b>
-													</b></p>
 												</section>
 											</div>
 
@@ -317,12 +282,22 @@
 													<img class="portfolio-images" width="200" height="200" src="images/computer-screen-linux.svg" alt="Suse" /><br>
 													<header>
 														<div class="center">
-															<h3><b>Suse</b></h3>
+															<h3><b><a href="suse.html" target="_blank">Suse</a></b></h3>
 														</div>
 														<br>
 													</header>
-													<p><b>
-													</b></p>
+												</section>
+											</div>
+
+											<div class="col-4 col-6-medium col-12-small">
+												<section class="box">
+													<img class="portfolio-images" width="200" height="200" src="images/networking.svg" alt="Cisco" /><br>
+													<header>
+														<div class="center">
+															<h3><b><a href="cisco.html" target="_blank">Cisco</a></b></h3>
+														</div>
+														<br>
+													</header>
 												</section>
 											</div>
 
@@ -335,8 +310,6 @@
 														</div>
 														<br>
 													</header>
-													<p><b>
-													</b></p>
 												</section>
 											</div>
 
@@ -349,8 +322,6 @@
 														</div>
 														<br>
 													</header>
-													<p><b>
-													</b></p>
 												</section>
 											</div>
 
@@ -363,8 +334,6 @@
 														</div>
 														<br>
 													</header>
-													<p><b>
-													</b></p>
 												</section>
 											</div>
 
@@ -377,8 +346,6 @@
 														</div>
 														<br>
 													</header>
-													<p><b>
-													</b></p>
 												</section>
 											</div>
 
@@ -391,8 +358,6 @@
 														</div>
 														<br>
 													</header>
-													<p><b>
-													</b></p>
 												</section>
 											</div>
 
@@ -405,8 +370,6 @@
 														</div>
 														<br>
 													</header>
-													<p><b>
-													</b></p>
 												</section>
 											</div>
 
