--- a/suse.html
+++ b/suse.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Dell EMC - Yashasvi</title>
+		<title>Suse - Yashasvi</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="shortcut icon" href="images/favicon.ico" />
@@ -10,8 +10,8 @@
 	<body class="right-sidebar is-preload">
 		<div id="page-wrapper">
 			<section id="header">
-				<img class="portfolio-images" width="200" height="200" src="images/rack-servers.svg" alt="Dell EMC - Yashasvi" />
-					<h1><a href="#"><b>Dell EMC</b></a></h1>
+				<img class="portfolio-images" width="200" height="200" src="images/computer-screen-linux.svg" alt="Suse - Yashasvi" />
+					<h1><a href="#"><b>Suse</b></a></h1>
 					<div class="full-nav">
 					<nav id="nav">
 
@@ -60,118 +60,33 @@
 								<article class="box post">
 									<section>
 										<header>
-											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Dell EMC Products Sold</b></h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Suse Products Sold</b></h3>
 										</header>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Data Storage</b></h3>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; General Suse Products:</b></h3>
 										<p>
 											<ol>
-												<li>All Flash and Hybrid Storage</li>
-												<li>Powermax</li>
-												<li>Xtremio</li>
-												<li>Dell EMC Unity</li>
-												<li>SC Series</li>
-												<li>Isilon</li>
-											</ol>
-										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; NAS & Object Storage</b></h3>
-										<p>
-											<ol>
-												<li>Islion</li>
-												<li>ECS</li>
-												<li>Dell-Emc Unity</li>
-											</ol>
-										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Software Defined Storage</b></h3>
-										<p>
-											<ol>
-												<li>VxRail</li>
-												<li>IsilonSD Edge</li>
-												<li>ECS</li>
-											</ol>
-										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Server</b></h3>
-										<p>
-											<ol>
-												<li>Rack servers</li>
-												<li>Modular infrastructure</li>
-												<li>Tower servers</li>
-												<li>Systems management software</li>
-												<li>Ready nodes</li>
-												<li>Data centre infrastructure</li>
-											</ol>
-										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Converged Infrastructure</b></h3>
-										<br>
-										<img class="point "src="images/point.svg" alt="point" width="25" height="25" /><h4><b>&nbsp; Converged System and Hyper Converged Infrastructure</b></h4>
-										<p>
-											<ol>
-												<li>VxRail</li>
-												<li>VSAN ready nodes</li>
-												<li>VxRack system FLEX</li>
-												<li>VxRACK SDDC</li>
-											</ol>
-										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Data Protection</b></h3>
-										<br>
-										<img class="point "src="images/point.svg" alt="point" width="25" height="25" /><h4><b>&nbsp; Data Backup and Protection software</b></h4>
-										<p>
-											<ol>
-												<li>VMware Data protection</li>
-												<li>Cloud data protection</li>
-												<li>Cyber recovery solution</li>
-											</ol>
-										</p>
-										<img class="point "src="images/point.svg" alt="point" width="25" height="25" /><h4><b>&nbsp; Data Backup & Protection Storage</b></h4>
-										<br>
-										<img class="point "src="images/point.svg" alt="point" width="25" height="25" /><h4><b>&nbsp; Integrated Appliances</b></h4>
-										<p>
-											<ol>
-												<li>Dell EMC IDPA DP - 5300</li>
-												<li>Dell EMC IDPA DP - 5800</li>
-												<li>Dell EMC IDPA DP - 8300</li>
-											</ol>
-										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Networking</b></h3>
-										<br>
-										<img class="point "src="images/point.svg" alt="point" width="25" height="25" /><h4><b>&nbsp; Networking Overview</b></h4>
-										<p>
-											<ol>
-												<li>Server network adapters</li>
-												<li>Switches</li>
-												<li>Network management</li>
-												<li>Wireless networking</li>
-												<li>Access platforms</li>
-												<li>Dell networking OS 9</li>
-												<li>Network and data security</li>
-											</ol>
-										</p>
-										<img class="point "src="images/point.svg" alt="point" width="25" height="25" /><h4><b>&nbsp; Switches</b></h4>
-										<p>
-											<ol>
-												<li>M - series blade </li>
-												<li>Managed campus</li>
-												<li>Smart managed switches</li>
-												<li>Modular chassis switches</li>
-												<li>Fibre channel SAN</li>
-												<li>High performance computing switches</li>
-											</ol>
-										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h4><b>&nbsp; Routers and Wireless Networking</b></h4>
-										<p>
-											<ol>
-												<li>New Aerohive access points</li>
-												<li>Hivemanger NG cloud management</li>
-											</ol>
-										</p>
-										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h4><b>&nbsp; Dell Products for work</b></h4>
-										<p>
-											<ol>
-												<li>Dell docking solutions</li>
-												<li>Dell latitude notebooks & 2-in-1s</li>
-												<li>Dell monitors</li>
-												<li>Dell optiplex desktops & all-in-ones</li>
-												<li>Dell precision workstations</li>
-												<li>Dell thin clients & VDI products</li>
+												<li>Linux Enterprise Server</li>
+												<li>Linux Enterprise High Availability Extension</li>
+												<li>Geo Clustering</li>
+												<li>Real Time Extension</li>
+												<li>Live Patching</li>
+												<li>Virtual Machine Driver Pack</li>
+												<li>Server Work Station Extension</li>
+											 	<li>Server for Arm</li>
+												<li>Server for Z System And Linux One</li>
+												<li>Server for Sap Application</li>
+												<br>
+												<li>Server for Power</li>
+												<li>Openstack Cloud</li>
+												<li>CaaS Platform</li>
+												<li>Cloud Application Platform</li>
+												<li>Suse Manager</li>
+												<li>Enterprise Storage</li>
+												<li>Suse Studio</li>
+												<li>Linux Enterprise Server for Amazon EC2</li>
+												<li>Linux Enterprise Server for Azure</li>
+												<li>Linux Server for VMware</li>
+												<li>Subscription Management Tool</li>
 											</ol>
 										</p>
 									</section>
